# NickolasDiaz-Text-Editor

./: .gitignore  CMakeLists.txt  DocumentText.cpp  DocumentText.h  LICENSE  README.md  Resource.h  TabControl.cpp  TabControl.h  TextEditor.cpp  TextEditor.h  nickolasddiaztexteditor.cpp  nickolasddiaztexteditor.rc  nickolasddiaztexteditor.sln  nickolasddiaztexteditor.vcxproj  nickolasddiaztexteditor.vcxproj.filters
